Change CookieBanner z-index to prevent overlapping with other components

--- a/packages/components/src/cookies_banner/index.module.scss
+++ b/packages/components/src/cookies_banner/index.module.scss
@@ -6,7 +6,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   background-color: $color-dark-alpha;
   font-size: 12px;
   color: $color-gray-07;
